shelf/shelf-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelf-server
  labels:
    app: shelf
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: shelf
  template:
    metadata:
      labels:
        app: shelf
    spec:
      containers:
        - name: shelf
          image: "docker.pkg.github.com/joachimprinzbach/shelf/app:v0.0.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mib
            limits:
              cpu: 100m
              memory: 256Mib
