shelf/shelf-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelf
  labels:
    app: shelf
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: shelf
